--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "react_node_app_setup",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DavidKHahn/react_node_app_setup.git"
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DavidKHahn/react_node_app_setup/issues"
-  },
-  "homepage": "https://github.com/DavidKHahn/react_node_app_setup#readme"
+  "devDependencies": {
+    "concurrently": "^4.0.1"
+  }
 }
