--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "extends": "react-app"
   },
   "proxy": "http://localhost:5000/",
-  
+
+  "start": "node server.js",
   "browserslist": [
     ">0.2%",
     "not dead",
